Cache quarters stats in server endpoint
Getting all quarters for every request is a bit heavier on memory than desired